--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1216,7 +1216,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="profile_featured_more">+%d More</string>
   <string name="all_drafts">Drafts</string>
   <string name="all_story">100 Word Story</string>
-  <string name="all_blogs">Blogs</string>
+  <string name="all_blogs">ব্লগ</string>
   <string name="all_videos">Videos</string>
   <string name="profile_post_featured">Post featured on the following collections</string>
   <string name="dialog_fragment_add_collection_select_collection">সংগ্রহ নির্বাচিত করুন</string>
@@ -1434,12 +1434,12 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="leaderboard_btn">View Leaderboard</string>
   <string name="total_blog_view">সর্বমোট অর্গানিক ব্লগ ভিউজ </string>
   <string name="total_vlog_view">সর্বমোট অর্গানিক ভিলগস ভিউজ </string>
-  <string name="leaderboard">Leaderboard</string>
+  <string name="leaderboard">লেয়াদেরবোর্ড </string>
   <string name="leaderboard_blogs">BLOGS</string>
   <string name="leaderboard_vlogs">VLOG</string>
   <string name="webview_hack_text">আপনার ব্লগস আর ভিলগস কিভাবে পাবে অর্গানিক ট্রাফিক,তার টিপস:</string>
   <string name="webview_term_text">নিয়ম ও শর্তাবলী </string>
-  <string name="earning_calculator">Earning Calculator</string>
+  <string name="earning_calculator">উপার্জন নির্ণয়ের ক্যালকুলেটর</string>
   <string name="click_here_btn">Click to view leaderboard</string>
   <string name="checkout_growth_hack">Checkout the growth hacks</string>
   <string name="blogger_gold_about_text">উৎসবের রেশ এখনও বাকি আছে আর সেই আনন্দের অংশীদার হতে আপনাকেও জানাই আমন্ত্রণ !!</string>
@@ -1502,4 +1502,11 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="tooltip_liked_the_blog">ভালো লেগেছে গল্প? প্রস্তুতকারীকে অনুসরণ করুন যাতে তাঁর পোস্ট সদাই দেখতে পান</string>
   <string name="coachmark_vlogs_2">থাম্বনেল ভালো হলে ভিডিওটি বেশিবার দর্শিত হবে</string>
   <string name="tooltip_groups">আপনার পছন্দের গ্রুপগুলিতে যোগ দিন।সমমনস্ক মানুষদের সাথে করুন আলাপচারিতা।</string>
+  <string name="video_language_settings">ভিডিওর ভাষার সেটিংস</string>
+  <string name="all_intrumental">বাদ্যযন্ত্র</string>
+  <string name="select_video_preferences">আপনার পছন্দের ভিডিও বেছে নিন</string>
+  <string name="please_select_lang">অনুগ্রহ করে একটি ভাষা চয়ন করুন</string>
+  <string name="watch_video_lang_choice">আপনার পছন্দের ভাষার ভিডিওগুলি দেখুন</string>
+  <string name="know_more">অধিক জানার জন্য</string>
+  <string name="all_vlogs">ভিলগস </string>
 </resources>
