--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -1255,7 +1255,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="profile_featured_more">+%d More</string>
   <string name="all_drafts">Drafts</string>
   <string name="all_story">100 Word Story</string>
-  <string name="all_blogs">Blogs</string>
+  <string name="all_blogs">ബ്ലോഗുകൾ</string>
   <string name="all_videos">Videos</string>
   <string name="profile_post_featured">Post featured on the following collections</string>
   <string name="dialog_fragment_add_collection_select_collection">ശേഖരം തിരഞ്ഞെടുക്കുക</string>
@@ -1473,12 +1473,12 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="leaderboard_btn">View Leaderboard</string>
   <string name="total_blog_view">മൊത്തം ഓർഗാനിക് ബ്ലോഗ് വ്യൂസ് </string>
   <string name="total_vlog_view">മൊത്തം ഓർഗാനിക് വ്ലോഗ് വ്യൂസ് </string>
-  <string name="leaderboard">Leaderboard</string>
+  <string name="leaderboard">ലീഡർബോർഡ്</string>
   <string name="leaderboard_blogs">BLOGS</string>
   <string name="leaderboard_vlogs">VLOG</string>
   <string name="webview_hack_text">നിങ്ങളുടെ ബ്ലോഗുകളിലേക്കും വ്ലോഗുകളിലേക്കും ഓർഗാനിക് ട്രാഫിക് ലഭിക്കുന്നതിനുള്ള ഉപായങ്ങൾ:</string>
   <string name="webview_term_text">ഉപാധികളും നിബന്ധനകളും</string>
-  <string name="earning_calculator">Earning Calculator</string>
+  <string name="earning_calculator">വരുമാന കാൽക്കുലേറ്റർ </string>
   <string name="click_here_btn">Click to view leaderboard</string>
   <string name="checkout_growth_hack">Checkout the growth hacks</string>
   <string name="blogger_gold_about_text">നിങ്ങളില്ലാതെ ഞങ്ങൾക്കെന്ത് ആഘോഷം? അപ്പോൾ വരൂ, ഈ ജന്മദിനം നമുക്ക് ഒരുമിച്ച് ആഘോഷിക്കാം!</string>
@@ -1541,4 +1541,11 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="tooltip_liked_the_blog">ലേഖനം ഇഷ്ടപ്പെട്ടോ? അതിശയകരമായ മറ്റ് പോസ്റ്റുകൾ‌ വിട്ടുപോകാതിരിക്കാൻ സ്രഷ്‌ടാവിനെ പിന്തുടരുക</string>
   <string name="coachmark_vlogs_2">ഒരു നല്ല ലഘുചിത്രം(Thumbnail  കൂടുതൽ കാഴ്ചക്കാരെ ആകർഷിക്കും</string>
   <string name="tooltip_groups">നിങ്ങൾ ഇഷ്ടപ്പെടുന്ന ഗ്രൂപ്പുകളിൽ ചേരുക. കമ്മ്യൂണിറ്റിയുമായി സംവദിക്കാൻ ആരംഭിക്കുക!</string>
+  <string name="video_language_settings">വീഡിയോ ഭാഷ ക്രമീകരണങ്ങൾ</string>
+  <string name="all_intrumental">വാദ്യോപകരണം</string>
+  <string name="select_video_preferences">താല്പര്യമുള്ള വീഡിയോ വിഭാഗങ്ങൾ തിരഞ്ഞെടുക്കൂ</string>
+  <string name="please_select_lang">ഭാഷ തിരഞ്ഞെടുക്കൂ</string>
+  <string name="watch_video_lang_choice">തിരഞ്ഞെടുത്ത ഭാഷയിലെ വീഡിയോകൾ കാണൂ</string>
+  <string name="know_more">കൂടുതൽ അറിയുക</string>
+  <string name="all_vlogs">വ്ലോഗുകൾ</string>
 </resources>
