--- a/app/src/main/res/values-mr/strings.xml
+++ b/app/src/main/res/values-mr/strings.xml
@@ -1209,7 +1209,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="profile_featured_more">+%d More</string>
   <string name="all_drafts">Drafts</string>
   <string name="all_story">100 Word Story</string>
-  <string name="all_blogs">Blogs</string>
+  <string name="all_blogs">ब्लॉग्स</string>
   <string name="all_videos">Videos</string>
   <string name="profile_post_featured">Post featured on the following collections</string>
   <string name="dialog_fragment_add_collection_select_collection">संग्रह निवडा</string>
@@ -1427,12 +1427,12 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="leaderboard_btn">View Leaderboard</string>
   <string name="total_blog_view">एकूण ऑरगॅनिक ब्लॉग व्हीव्यूज</string>
   <string name="total_vlog_view">एकूण ऑरगॅनिक व्हिलॉग व्हीव्यूज</string>
-  <string name="leaderboard">Leaderboard</string>
+  <string name="leaderboard">लीडरबॉर्ड</string>
   <string name="leaderboard_blogs">BLOGS</string>
   <string name="leaderboard_vlogs">VLOG</string>
   <string name="webview_hack_text">ब्लॉग आणि व्हिलॉग जास्ती जास्त लोकांपर्यत पोहचण्यासाठीचे उपाय.</string>
   <string name="webview_term_text">नियम आणि अटी</string>
-  <string name="earning_calculator">Earning Calculator</string>
+  <string name="earning_calculator">कमाई  कॅल्क्युलेटर</string>
   <string name="click_here_btn">Click to view leaderboard</string>
   <string name="checkout_growth_hack">Checkout the growth hacks</string>
   <string name="blogger_gold_about_text">आम्ही आनंदोत्सव साजरा करीत आहोत आणि त्यात तुमचा सहभाग असणारच आहे !</string>
@@ -1495,4 +1495,11 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="tooltip_liked_the_blog">लेख आवडले? निर्मात्याच्या  पोस्ट न चुकता वाचण्यासाठी त्यांना फॉलो करा. </string>
   <string name="coachmark_vlogs_2">चांगली लघुप्रतिमा असेल तर व्हीव्यूज  जास्त मिळतात.</string>
   <string name="tooltip_groups">तुमच्या आवडीच्या गटात सामील व्हा. समुदायाशी संवाद साधण्यास प्रारंभ करा!</string>
+  <string name="video_language_settings">भाषा सेटिंग </string>
+  <string name="all_intrumental">संगितीक वाद्य</string>
+  <string name="select_video_preferences">व्हिडिओ प्रेफरन्सेस सिलेक्ट करा </string>
+  <string name="please_select_lang">कृपया भाषा सिलेक्ट करा </string>
+  <string name="watch_video_lang_choice">मची भाषा निवडून व्हिडिओ बघा </string>
+  <string name="know_more">अधिक जाणून घ्या</string>
+  <string name="all_vlogs">व्हिलॉग्ज</string>
 </resources>
