Short story viewall button visibility fix

--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1425,7 +1425,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
   <string name="leaderboard_btn">View Leaderboard</string>
   <string name="total_blog_view">பதிவுகளின்  தன்னிச்சையான பார்வையாளர்கள்  எண்ணிக்கை </string>
   <string name="total_vlog_view">விலாக்கள்   தன்னிச்சையான பார்வையாளர்கள்  எண்ணிக்கை </string>
-  <string name="leaderboard">லேடெர்போர்டு</string>
+  <string name="leaderboard">லீடர்போர்ட்</string>
   <string name="leaderboard_blogs">BLOGS</string>
   <string name="leaderboard_vlogs">VLOG</string>
   <string name="webview_hack_text">உங்கள் படைப்புக்களின் தன்னிச்சையான பார்வையாளர்கள் அதிகரிக்க சில குறிப்புகள்</string>
